--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
 </head>
+<style>
+    html, body {
+      font: Times;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background: linear-gradient(to bottom, #42cef5, #3173f7);
+      background-repeat: no-repeat; /* Ensure gradient doesn't repeat */
+    }
+        /**/
+      </style>
+<title>
+    RoadTripFunTime
+</title>
+<style>
+    .button{
+            margin: 10px;
+            padding: 10px 25px;
+            background-color: #04b023;
+            color: black;
+            border: none;
+            font-size: 15px;
+            border-radius: 5px;
+            
+    }
+</style>
+</head>
+<body>
+<h1
+style="
+background-color: #04b023;
+color: darkgreen;
+border-radius: 5px;
+font-size: 40px;">
+
+
+
+</h1>
 <body>
     <h1>Quiz Questions</h1>
     <form method="POST" action="/submit">
+
         {% for question, data in questions %}
-            <p>{{ question }}</p>
+            <p> {{ question }}</p>
+            <table><tr>
             {% for option in data.options %}
-                <input type="radio" name="{{ question }}" value="{{ option }}"> {{ option }}<br>
+              <td><button class="button" name="{{ question }}" value = "{{option}}"> {{option}} </button></td>
             {% endfor %}
+            </tr></table>
         {% endfor %}
-        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
