--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
 <style>
     .button{
             margin: 10px;
-            padding: 10px 25px;
-            background-color: #04b023;
+            padding: 20px 50px;
+            background-color: #ffe602de;
             color: black;
             border: none;
             font-size: 15px;
@@ -36,28 +36,21 @@
 </style>
 </head>
 <body>
-<h1
-style="
-background-color: #04b023;
-color: darkgreen;
-border-radius: 5px;
-font-size: 40px;">
-
-
-
-</h1>
-<body>
-    <h1>Quiz Questions</h1>
-    <form method="POST" action="/submit">
-
+  <form action="javascript:void(0);">
+    <h1>Fun on the Run!</h1>
         {% for question, data in questions %}
             <p> {{ question }}</p>
             <table><tr>
             {% for option in data.options %}
-              <td><button class="button" name="{{ question }}" value = "{{option}}"> {{option}} </button></td>
+              <td><button onclick="setColor(this, 'green')" class="button" name="question" value = "{{option}}"> {{option}} </button></td>
             {% endfor %}
             </tr></table>
         {% endfor %}
-    </form>
+  </form>
+    <script>
+      function setColor(_this, color) {
+        _this.style.backgroundColor = color
+      }
+    </script>
 </body>
 </html>
