--- a/templates/homescreen.html
+++ b/templates/homescreen.html
@@ -49,8 +49,8 @@
   </div>
 <script>
     function goToSecondScreen() {
-        window.location.href = "questions.html";
+        window.location.href = "/index";
     }
-</script>
+</script> 
 </body>
 </html>
